tests/blackhole/sfpi/gold/warn_spill.txt
In file included from /home2/pkeller/src/sfpi/include/sfpi.h:1251,
                 from test.h:17,
                 from warn.cc:11:
/home2/pkeller/src/sfpi/include/blackhole/sfpi_imp.h: In function 'void spill()':
/home2/pkeller/src/sfpi/include/blackhole/sfpi_imp.h:105:11: fatal error: cannot store sfpu register (register spill)
  105 |     assign(__builtin_rvtt_sfpxloadi(SFPXLOADI_MOD0_FLOAT, __f32asui(val)));
      |     ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
